Added icons to test navbar

--- a/frontend/components/navbar.kv
+++ b/frontend/components/navbar.kv
@@ -9,22 +9,18 @@ NavBar:
                 name: "Screen 1"
                 title: "Language"
                 MDNavigationItemIcon:
-                    icon: 'language-Python'
-                
+                    icon: 'translate'              
                     
-        
             MDNavigationItem:
                 name: "Screen 2"
                 title: "Language"
                 MDNavigationItemIcon:
-                    icon: 'language-Python'
+                    icon: 'sign-language'
                 
-                    
-        
             MDNavigationItem:
                 name: "Screen 3"
-                title: "Language"
+                title: "camera"
                 MDNavigationItemIcon:
-                    icon: 'language-Python'
+                    icon: 'video-outline'
                 
                     
