Set screen size

--- a/frontend/components/navbar.kv
+++ b/frontend/components/navbar.kv
@@ -2,9 +2,11 @@ NavBar:
     name: "test screen"
     MDBoxLayout:
         orientation: "vertical"
-        
-        MDNavigationBar:
 
+        MDNavigationBar:
+            color: 131 , 212 , 204 , 1
+            text_color_active: .2, .2, .2, 1
+            text_color_normal: .9, .9, .9, 1
             MDNavigationItem:
                 name: "Screen 1"
                 title: "Language"
