Set background color

--- a/frontend/components/navbar.kv
+++ b/frontend/components/navbar.kv
@@ -2,11 +2,12 @@ NavBar:
     name: "test screen"
     MDBoxLayout:
         orientation: "vertical"
-
+        md_bg_color: [1 , 1 , 1 , 1]
         MDNavigationBar:
-            color: 131 , 212 , 204 , 1
+            md_bg_color: [131 , 212 , 204 , 1]
             text_color_active: .2, .2, .2, 1
             text_color_normal: .9, .9, .9, 1
+            
             MDNavigationItem:
                 name: "Screen 1"
                 title: "Language"
